--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       <link href="./styles.css" rel="stylesheet">
    </head>
    <body id="body">
-   	<div>
-      <h1>Hi, I’m Thomas.</h1>
+   	<div id="square">
+      <h1>Hi!</h1>
+      <p>I’m Thomas.</p>
       <p>
-         <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./instagram.svg" alt="Instagram logo" title="Instagram logo">Instagram</a>
+         <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./instagram.svg" alt="Instagram logo" title="Instagram logo">IG</a>
       </p>
       <p>
          <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./twitter.svg" alt="Instagram logo" title="Twitter logo">Twitter</a>
@@ -24,9 +25,18 @@
          document.documentElement.style.setProperty('--pattern-seed', Math.random() * 10000);     
       </script>
       <script>
-      	var colors = ['#97F091', '#91f0e3', '#ffea54', '#e0f1ff', '#c8ffed'];
+      	var colors = ['#97F091', '#91f0e3', '#ffea54', '#e0f1ff', '#c8ffed', '#b0e8f5'];
 
       	document.getElementById("body").style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+      </script>
+      <script>
+      	const getRandom = (min, max) => Math.floor(Math.random()*(max-min+1)+min);
+
+      	const square= document.querySelector('#square');
+      	
+      	   square.style.left= getRandom(0, 300 - 200)+'px'; // Horizontally
+      	   square.style.top = getRandom(0, 300 - 200)+'px'; // Vertically
+      	    
       </script>
    </body>
 </html>
