--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Hi!</h1>
       <p>I’m Thomas.</p>
       <p>
-         <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./instagram.svg" alt="Instagram logo" title="Instagram logo">IG</a>
+         <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./instagram.svg" alt="Instagram logo" title="Instagram logo">Instagram</a>
       </p>
       <p>
          <a href="https://www.instagram.com/thomasrettig12/" target="blank"><img src="./twitter.svg" alt="Instagram logo" title="Twitter logo">Twitter</a>
